2012-12-06  Sam Steingold  <sds@gnu.org>

	* gnus-start.el (gnus-before-resume-hook): Add.
	(gnus-1): Run it when Gnus is alive.

2012-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-called-interactively-p): Restore as a macro.
	* gnus-art.el (article-unsplit-urls)
	* gnus-bookmark.el (gnus-bookmark-bmenu-list)
	* gnus-registry.el (gnus-registry-get-article-marks)
	* message.el (message-goto-body): Use it.
	(message-called-interactively-p): Remove.

	* spam-stat.el (spam-stat-called-interactively-p): New macro.
	(spam-stat-score-buffer): Use it.

	* spam.el: Silence the warnings against BBDB functions when compiling.

	* gnus-score.el (gnus-score-decode-text-parts):
	Use append+mapcar instead of the cl function mapcan.

2012-12-05  Sam Steingold  <sds@gnu.org>

	* gnus.el (gnus-delete-gnus-frame): Extract from `gnus-other-frame'.
	(gnus-other-frame): Add `gnus-delete-gnus-frame' to
	`gnus-suspend-gnus-hook' in addition to `gnus-exit-gnus-hook'.

2012-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-called-interactively-p): Revert.
	This seems to cause Emacs to get stuck!
	* gnus-art.el (article-unsplit-urls)
	* gnus-bookmark.el (gnus-bookmark-bmenu-list)
	* gnus-registry.el (gnus-registry-get-article-marks)
	* message.el (message-goto-body)
	(message-called-interactively-p): Revert.

	* gmm-utils.el (gmm-called-interactively-p): New function.
	* gnus-art.el (article-unsplit-urls)
	* gnus-bookmark.el (gnus-bookmark-bmenu-list)
	* gnus-registry.el (gnus-registry-get-article-marks)
	* message.el (message-goto-body): Use it.
	(message-called-interactively-p): Remove.

	* gmm-utils.el (gmm-flet): Restore it using cl-letf.
	* gnus-sync.el (gnus-sync-lesync-call)
	* message.el (message-read-from-minibuffer): Use it.

2012-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-flet): Remove.
	* gnus-sync.el (gnus-sync-lesync-call)
	* message.el (message-read-from-minibuffer): Don't use it.
